--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   },
   "dependencies": {
     "isomorphic-fetch": "^2.2.1",
+    "material-ui": "^0.16.5",
     "react": "^15.4.1",
     "react-addons-css-transition-group": "^15.4.1",
     "react-addons-transition-group": "^15.4.1",
@@ -14,6 +15,7 @@
     "react-dom": "^15.4.1",
     "react-masonry-component": "^4.4.0",
     "react-redux": "^5.0.1",
+    "react-tap-event-plugin": "^2.0.1",
     "react-ui": "^0.6.2",
     "redux": "^3.6.0",
     "redux-logger": "^2.7.4",
