--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "react-scripts": "0.8.4"
   },
   "dependencies": {
+    "dateformat": "^2.0.0",
     "isomorphic-fetch": "^2.2.1",
     "material-ui": "^0.16.5",
     "react": "^15.4.1",
