--- a/package.json
+++ b/package.json
@@ -2,7 +2,9 @@
   "name": "react-ny-times",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://alcatraz635.github.io/react-ny-times",
   "devDependencies": {
+    "gh-pages": "^0.12.0",
     "react-scripts": "0.8.4"
   },
   "dependencies": {
@@ -27,6 +29,7 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "deploy": "npm run build&&gh-pages -d build"
   }
 }
